--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
